--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,14 @@ img:hover {
 
   }
 }
+
+@media all and (min-width: 1200px) {
+
+  body {
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
 /*
 
 nav {
