--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,13 @@ img:hover {
   text-align: center;
 }
 
+.btn-default:hover {
+    background-color: #b4fc80;
+    border-color: white;
+    -webkit-transition: background-color .5s; /* For Safari 3.1 to 6.0 */
+    transition: background-color .5s;
+}
+
 ::-moz-selection { /* Code for Firefox */
     background: yellow;
 }
