--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,10 @@ a:hover {
   transition: background-position 1s;
 }
 
+.contacthead {
+  display: inline;
+}
+
 h1 {
   font-family: 'Averia Serif Libre', cursive;
   font-size: 2.25em;
